--- a/team2/index.html
+++ b/team2/index.html
@@ -61,16 +61,20 @@ This table gives the reader information on who we are (Name age grade)-->
           <td>19</td>
           <td>Sophomore</td>
         </tr>
+        <!--INSTR: Missing a <tr> tag to show where a new "table row" begins.-->
           <td>Ray</td>
           <td>Yu</td>
           <td>19</td>
           <td>Freshmen</td>
+          <!--INSTR: and the closing </tr> too.-->
 
 </table>
 <!-- Eric's Work starts here. My Focus: Valorant Closed beta, informing how to gain access to
 the beta as well as what I believe to be the rankings for the game. -->
 <h3 style = "color:darkred">Eric I's Activity</h3>
+<!--INSTR: It's not really necessary to enclose a single <p> within a <div> unless you're doing specific things with the <div>'s style that you want to not do with the <p> tag.-->
 <div>
+  <!--INSTR: Is it important for the line breaks to be where they are? Like why use these <br> tags below?-->
   <p> <span>Like most teenagers, I've turned to video games as a way to <br>
   spend my free time during this quarantine.</span> Even before this quarantine <br>
  I was a huge gamer. I even have my own custom built PC! Most gamers have <br>
@@ -86,6 +90,7 @@ that I used to get access to the game! </p>
       <li>Make a riot games account</li>
       <li>Link said account with said twitch account</li>
       <li>Watch any <em>Valorant</em> gameplay on the twitch platform</li>
+      <!--INSTR: Again, why are you adding line breaks <br>? If it's so that you can see it within VSCode, just go to View->Toggle Word Wrap.-->
       <li>Once you've logged two hours of watch time you'll be entered into<br>
       the pool for the day!</li>
     </ul>
@@ -100,6 +105,7 @@ that I used to get access to the game! </p>
     </ul>
     <strong>Rankings of characters in <em>Valorant</em> (From Best - Worst):</strong><br>
     <ol>
+      <!--INSTR: Don't need line breaks <br> after the list items <li>. A list item tag automatically creates a line break after the text is rendered.-->
       <li><img src="images/Raze.PNG" alt= "Raze" width="65"> Raze</li><br>
       <li><img src="images/Sova.PNG" alt= "Sova" width="65"> Sova</li><br>
       <li><img src="images/Omen.PNG" alt= "Omen" width="65"> Omen</li><br>
@@ -158,6 +164,7 @@ and providing some insight on what I enjoy most about the game-->
   <h3 style = "color:rgb(39, 102, 138)">Lars V's Activity</h3>
   <!--Body Paragraph-->
     <div>
+      <!--INSTR: Same comments as above re <div> and <br>.-->
       <p>Quarentine has proven to be difficult when finding activities to do. I've been playing more piano<br> 
       and similar to Eric and Satveer, I have started playing new games such as <em>Valorant</em> and <em>Animal Crossing:<br>
       New Horizons.</em> However above all, I have gotten most of my enjoyment from <em>Teamfight Tactics,</em> a strategy game<br> 
