--- a/team6/index.html
+++ b/team6/index.html
@@ -14,6 +14,7 @@
     <div style="font-size:150%;"><strong>Buck</strong></div>
     <p>He is a <span style="color:FireBrick">two year old</span> <strong>Border Collie</strong> who enjoys <em>chasing</em> anything that moves.</p>
 
+  <!--INSTR: It's good that you all are using a subfolder for media files. For all filenames that live on the web, please use only lowercase. You should change these, and you probably will have to rename the files in MacOS or Windows, too.-->
     <img src="Media/Buck4.JPG" alt="Buck" width="300">
     <hr>
     <div></div> <!-- to add space between the photo and the next pet-->
@@ -22,6 +23,7 @@
 <p>She is a <span style="color:olivedrab">three year old</span> <strong>Domestic Long-Hair</strong> who loves <em>eating plants</em> and <em>chasing laser pointers</em>.</p>
 <img src="Media/Soba_1.jpg" alt="Soba" width="300"><br>
 <!-- Using br instead of the div tag for a space between parts. Kat's part ends here.-->
+<!--INSTR: I'm ambivalent about which is better, but technically <br> does stand for line break. The <div> tag that Taylor would be useful if you need to specify exactly how much space there should be because then you could apply a style to the div.-->
 <hr>
 
 <!-- Gabe's part starts here-->
@@ -35,7 +37,7 @@
 
     <!--Talked a bit more about my dog, too cute-->
     <div>
-      <span style="color:grey">Bella</span> runs around all day and brings <kbd><span style="color:rgb(84, 54, 54)">mud</span></kbd> back into the house, <br> but she is too <kbd><span style="color:pink">cute</span></kbd> to get angry at. :)
+      <span style="color:grey">Bella</span> runs around all day and brings <kbd><!--INSTR: It's weird to use the keyboard <kbd> tag here...--><span style="color:rgb(84, 54, 54)">mud</span></kbd> back into the house, <br> but she is too <kbd><span style="color:pink">cute</span></kbd> to get angry at. :)
     </div>
     <div>
       Even at <strong>9 years</strong> of age, she's just as <em>energenic</em> as a <span style="color:rgb(126, 128, 0)">puppy</span>!
@@ -56,8 +58,7 @@
    <!-- Added a photo of her-->
 <!-- Weyni's part ends here-->
 
-<!-- group collaboration; Kat change
-  d title name and structure; each student added thier respective pet info-->
+<!-- group collaboration; Kat changed title name and structure; each student added thier respective pet info-->
 <h2>How do we compare?</h2>
 <table style="width:65%">
     <tr>
@@ -91,6 +92,7 @@
       <td>7</td>
     </tr>
     </tr>
+    <!--INSTR: Extra closing table row </tr> tag above.-->
   </table>
     
   <div></div> <!-- to make a larger gap between the table and the list-->
@@ -100,6 +102,7 @@
   <h2>Fun facts about us</h2>
   <p>Listed in alphabetical order:</p>
   <ul style="list-style:circle;"></ul>
+  <!--INSTR: The closing unordered list </ul> tag should be after all of the list items <li> tags.-->
   <li><strong><span style="color:grey">Bella</span></strong>: Weimaraners are nick-named <span style="color:grey;font-weight:bold">Grey-Ghosts</span>, for their <kbd>short</kbd> and <em>smooth</em> grey hair.</li> <!-- Love fun facts!-->
   <li><span style="color:FireBrick"><strong>Buck</strong>:</span> A fun fact about me is that I have two siblings, my brother Grif and my sister Dare!</li>
   <li><span style="color:rgb(148, 108, 180)"><strong> Lily </strong>:</span> A fun fact about me is live with two cats and a turtle</li>
