--- a/team7/index.html
+++ b/team7/index.html
@@ -26,6 +26,7 @@
             <p>This is <strong>ANOTHER</strong> paragraph!</p>
         </div>
         <div>
+            <!--INSTR: Good use of a subfolder for images. It isn't THAT important these days, but generally you should try to make all your filenames lowercase.-->
             <img src="images/Aidan's Picture.jpg" alt="Aidan" style="width:200px;height:200px;">
             <br>
             <img src="images/Sonic Movie Meme.jpg" alt="Uh...Meow?" style="width:400px;height:200px;">
@@ -52,6 +53,7 @@
         </span>
         <div>
             <strong>Aidan's Favorite Video Games:</strong>
+            <!--INSTR: You have a bunch of list items <li> tags here that aren't within a meta tag that specifies what sort of list to display <ol> or <ul>. This works in modern browsers but only because they're forgiving. It is syntatically incorrect.-->
                 <li>Super Smash Bros. <em>Ultimate</em></li>
                 <li style="color: blue;">Sonic the Hedgehog</li>
                 <li>Secret of Mana</li>
