--- a/team8/index.html
+++ b/team8/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <!--headings-->
+<!--INSTR: Start indenting your code. Sections embedded within other sections should be indented.-->
 <h1>My First Heading</h1>
 <h2>My Second Heading</h2>
 <p>My paragraph.</p>
@@ -44,6 +45,7 @@
   </ul>
   <!--image-->
   <p>stole ninas photo because I didn't want to link my own lol whoops</p>
+  <!--INSTR: It's good that you're using a subfolder for images. Usually, you don't want special characters in your folder names, and you want everything to be lowercase. Oh, and avoid periods except at the end to indicate the filetype extension.-->
   <img src="Pictures!/K.K Pit.jpg" alt ="My brain cells when K.K comes to the island" width="300">
 <!-- This is where Nina's work starts. :) -->
  
@@ -70,6 +72,7 @@
 
     <!--Added <table> :: about ...rad..ness? idk. -->
     <div> 
+        <!--INSTR: Try not to interleave/overlap tags so move the closing </strong> to before the first line break <br>.-->
         <strong>Table time! ~ <br></strong><br>
 
         <table style="width:20%">
@@ -123,7 +126,7 @@
 
 <!--And this is where Nina's work ends. :)-->
 
-
+<!--INSTR: The closing </body> and </html> tags should appear last on a webpage. The content that Asa and Rina did should be within the overall <body> tag.-->
 </body>
 </html>
 
@@ -204,6 +207,7 @@
 <p> can you see it? prolly not cause it blends in with the background</p>
 
 <!-- Add <div> and color to the box-->
+    <!--INSTR: The things in the style attribute below are missing quote marks "".-->
 <div style=background-color:black>
 <h3 style = "color:white"> Rina's fourth heading</h3>
 <p> yay! you can prolly see it now!</p>
@@ -212,6 +216,7 @@
 <!-- Span -->
 
 <p>My favorite color is...
+    <!--INSTR: quote marks below again ""-->
     <div style=background-color:black>
         <span style = "color:white"> white </span> 
     </div> 
@@ -226,6 +231,7 @@
 <!-- Table -->
 <table style="width:30%">
     <tr>
+        <!--INSTR: I'm actually surprised your table didn't break, but you should have the same number of headings <th> and cells <td> in each row or use the rowspan or colspan attributes.-->
         <th>Corgi</th>
         <th>Shiba</th>
     </tr>
