--- a/team5/index.html
+++ b/team5/index.html
@@ -35,6 +35,7 @@
 <!--Added italicized text to add a quick comment about the process-->
 <em>Note: Different sized shapes will require different amounts of blur and shadow opacity. Play around with these components until you find the amount that looks right to you!</em>
 </p>
+<!--INSTR: There's a </p> above that doesn't have an opening <p> before it, which should be before the <em>.-->
 <p>
 <h2>How to create a pushed in Neumorphic circle</h2>
     <ol>
@@ -52,6 +53,7 @@
 </p>
 
 <p>
+  <!--INSTR: A <p> tag denotes a paragraph, so it's weird having a heading <h> tag within it.-->
 <!--Added an unordered list to decribe the prototyping process. Some of the words have <q> tag to quote where to find a function in Adobe XD-->
 <h2>Prototyping</h2>
 <ul>
@@ -139,10 +141,12 @@
 <br>
 <!-- Start of hex color codes section.-->
 </p>
+<!--INSTR: There's an extra </p> above. And you don't really need the one below this since you have a heading <h> tag.-->
 <p>
 <h2>Text color using  <span style="color:blue">Hex</span> color codes</h2>
     <p>The most common way of coloring HTML text is by using hexadecimal color codes (Hex code for short). Simply add a style attribute to the text element you want to color and use the color property with your Hex code. You would want to use a Hex color code for the following reasons:</p>
 <!-- Used an ordered list to show why you would want to use Hex color codes-->
+<!--INSTR: It's not necessary to embed a list <ol> into a paragraph <p>.-->
     <p>
     <ol>
         <li>If you already have a code</li>
@@ -154,6 +158,7 @@
 <p>
 <h2>Text color using <span style="color:purple">HTML</span> color names</h2>
 <p>Another way to color your website's text is by using an HTML color name. The HTML code is similar, just replace the Hex code from the previous step with the name of the color you want to use.</p>>
+<!--INSTR: Extra > above.-->
 <br>
 <em>Note: There are 140 named colors to choose from, and there is a list which you can check out at https://htmlcolorcodes.com/color-names/</em>
 <br>
@@ -161,6 +166,7 @@
 </p>
 <em>Example: Table of <span style="color:red">Red</span> HTML color names</em>
 <!--Added a <table> with some space between the text and wall inside of cells and a width of 400px.-->
+  <!--INSTR: You added a stylesheet here. For ease of readability, it's preferred to embed styles into the <head> part of a webpage.-->
     <style type="text/css">
         .tg  {border-collapse:collapse;border-spacing:0;}
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
@@ -197,12 +203,14 @@
     <br>
 <!-- Start of RGB color values section.-->
 </p>
+<!--INSTR: Another extra </p> above. And, again, you probably shouldn't use a <p> to encapsulate your sections with headings and paragraphs. If you want to treat the heading/paragraph section as a unit, use the <div> tag instead.-->
 <p>
 <h2>Text color using <span style="color:orange">RGB</span> color values</h2>
     <p>Insert your RGB values within the rgb() parameter following the color property. When using an RGB value in your website, you can also specify opacity. Instead of rgb() use rgba() – the a is for alpha, the color channel that controls opacity – and after your three color values add a fourth for opacity, on a scale from 0 – 1 (0 for completely transparent, 1 for fully opaque).</p>
 </p>
 <!-- Start of HSL color values section.-->
 </p>
+<!--INSTR: Extra </p> above.-->
 <p>
 <h2>Text color using <span style="color:green">HSL</span> color values</h2>
     <p>A fourth method for adding color is by using HSL values. Similar to the RGB syntax described above, HSL uses the hsl() prefix, and three values for hue, saturation and lightness. Hue is represented on a scale of 0 – 360, while saturation and lightness are each a percentage between 0% and 100%. Just like RGB, when using HSL you can modify the color opacity right in the color property. Use the hsla() prefix and include a fourth value between 0 and 1 for the level of opacity you need.</p>
@@ -231,7 +239,7 @@
     </p>
 
     <h1>Gorillas</h1>
-    <p><strong>Gorillas</strong>, not to be confused with the band <strong>"Gorillaz"</strong>, are ground-dwelling apes that primarily reside in the forests of central Sub-Saharn Africa. They are the largest living primates.</p>
+    <p><strong>Gorillas</strong>, not to be confused with the band <strong>"Gorillaz"</strong> <!--INSTR: I have a hard time believing this was in Wikipedia...-->, are ground-dwelling apes that primarily reside in the forests of central Sub-Saharn Africa. They are the largest living primates.</p>
     
     <h2>Types of Gorillas</h2>
     <p>Gorrilas are divided into 2 main species:</p>
@@ -278,9 +286,11 @@
 <!--Added a color to differentiate my heading as well as bolding it-->
 <h1><strong><span style="color:blue">Manals Section</span></strong></h1>
 </div>
+<!--INSTR: This seems to be an extra closing </div> tag above.-->
 <p>I thought it would be cool to have my section of the page be about memes because they are entertaining. </p>
 <h1> <em>What Are Memes?</em></h1>
 </div>
+<!--INSTR: Another extra closing </div> tag above.-->
 <p>Memes are practically "an idea, behavior, or style that spreads by means of imitation from person to person within a culture-often with the aim of conveying a particular phenomenon, theme, or meaning represented by the meme" (Wikipedia).They are used to fulfill a type of humor and are popular on social media platforms as well.</p>
 <!--used a horizontal line to divide the definition of memes from the actual content in memes and how to create them-->
 <hr>
@@ -295,6 +305,7 @@
     <li>Dank Memes: Very dark humor so many people dont find them funny, however they are original and appeal to some. They are still looked at in todays society.</li>
 </ul>
 </p>
+<!--INSTR: Extra </p> above.-->
 <!--inserted a numbered list to show step by step on how to create a meme-->
 <h1><em>How To Create a Meme</em></h1>
 <ol>
@@ -302,6 +313,8 @@
 <li>Now, depending on which type of meme you chose you need to decide what it will be about. It can either be referencing a culture, historical event, or even an inside joke you have with the people you are sharing it with. </li>
 <li>Next,you should choose an image that relates with the reference u decided on doing </li>
 <li>Finally, you can add the written content you want over the image (most people use the impact font) and thats it!</li>
+<!--INSTR: Missing the closing ordered list </ol> tag.-->
+<!--INSTR: While technically it may work, you should use keep a consistent style to your code so the <P> below should be <p>.-->
 <P><em> P.S if you dont want to put that much effort in creating a meme then you can just use any meme generator app:) </em></P>
 <hr>
 <!--added a table to describe the different types of people that fit with different types of memes-->
@@ -340,6 +353,8 @@ table, th, td {
 <h1>Here is an Example Of A Meme:</h1>
 </div>
 <!--I added an Image of a meme so the audience can visualize it-->
+
+<!--INSTR: To close an <img> tag, you don't actually need a closing tag so </img> is not needed, but you do need to throw in a missing bracket > after "funny meme"-->
 <img src="https://pics.me.me/nobody-history-channel-after-midnight-history-com-classic-meme-new-format-59270115.png" alt="funny meme"
 </img>
 
